added transitions and animate.css

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,7 +2,7 @@
 @import "neat";
 
 * {
-	font-family:  'GT-Walsheim-Condensed-Regular', 'Avenir', Helvetica, Arial, sans-serif;
+	font-family: 'Catamaran', Helvetica, Arial, sans-serif;
 	box-sizing: border-box;
 }
 
