--- a/wrapper/legalaidatwork.org/pregnancy-leave-rights/main.css
+++ b/wrapper/legalaidatwork.org/pregnancy-leave-rights/main.css
@@ -110,6 +110,19 @@
   margin: 0 0 1em;
 }
 
+@media (max-width:768px) {
+  #main>article>section>form>fieldset>div>div>p {
+    font-size: 1.5rem;
+  }
+  #main section form fieldset label {
+    padding: 10px 30px;
+    font-size: 1rem;
+  }
+  #contact-submit{
+    width:100%;
+  }
+}
+
 #main section form fieldset input[type=radio]:checked+label {
   background-color: #738191;
   cursor: default;
@@ -258,6 +271,8 @@
   max-width: 88rem;
   position: relative
 }
+
+
 
 
 
@@ -1733,6 +1748,8 @@
 .slideOutUp {
   animation-name: slideOutUp
 }
+
+
 
 
 
